SERVER-30933 Change invariant to uassert for invalid uuid in queries