src/mongo/db/query/query_request.h
@@ -78,7 +78,8 @@ public:
 
     /**
      * If _uuid exists for this QueryRequest, use it to update the value of _nss via the
-     * UUIDCatalog associated with opCtx.
+     * UUIDCatalog associated with opCtx. This should only be called when we hold a DBLock
+     * on the database to which _uuid belongs, if the _uuid is present in the UUIDCatalog.
      */
     void refreshNSS(OperationContext* opCtx);
 
